Align dbmigrate implementation with Go version
- Updated Migrator class to match Go version's migration logic
- Improved TestDB isolation for migration tests
- Fixed MigrationBundle to handle migration execution properly
- Enhanced test database management alignment with river4go
- Removed redundant MigratorV2 and MigrationService classes
- All migration tests now passing with proper database isolation